# api-permission-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  tox.ini
.github/workflows/: build_and_test.yml  publish_client.yml
api/: migrate.py  models.py  schemas.py  server.py  settings.py  utils.py
build_client/typescript/: .gitignore  build.js  gen_client.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.browser.json  tsconfig.node.json
migrations/models/: 0_20210402093314_init.sql  0_20210414061706_init.sql
test/: conftest.py  test_api.py  test_models.py  test_utils.py
test/test_api/: test_actions.py  test_is_permitted.py  test_others.py  test_permitted_actions.py  test_permitted_databases.py  test_roles.py  test_users.py
